crates/ryft-macros-tests/tests/parameters/error_tuples.rs
use ryft::{Parameter, Parameterized};

#[derive(Parameterized)]
struct NestedVecOfTuples<P: Parameter> {
    parameter: Vec<(P, usize)>,
}

fn main() {}
